# neural

./: .gitignore  README.md  requirements.txt
c/openann/: CMakeLists.txt
c/openann/include/: Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h
c/openann/src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp
docs/: code.ipynb
f1predict/: README.md  f1predict_monaco.ipynb
imdb-sentiment_analysis_keras/: sample_imdb_sentiment_analysis.ipynb
jupyter/: cuda-test.ipynb  micrograd.ipynb  micrograd.py  simple-ann.ipynb  simple-ann.pt  simple-nn.ipynb  simple_mnist_cnn.ipynb
keras/cats-vs-dogs/: README.md  cats-v-dogs.ipynb
keras/face_mask_detection/: README.md  face_mask_detection.ipynb
keras/house_prices_regression/: README.md  house_prices_regression.ipynb
keras/imdb-sentiment_analysis-keras/: sample_imdb_sentiment_analysis.ipynb
keras/k-titanic/: README.md  k-titanic-pred.ipynb  k_titanic_pred_tfdf.ipynb
keras/stock-chart-prediction/: stock-prediction.ipynb
keras/stock-exchange-predict/: README.md  model.keras  stock-prediction-lstm.ipynb
keras/weather-forecast/: README.md  weather-all-feature.ipynb
pytroch/fashionmnist/: fashhionmnist-cnn.ipynb  model.pt
pytroch/makemore/: README.md  makemore-batchnorm.ipynb  makemore-batchnorm.py  (+4 more)
quant/: README.md  garch-intraday.ipynb  stockpredict-sklearn.ipynb  strategies.ipynb  twitter-sentiment.ipynb  unsupervised_trading_strategy.ipynb
rustyann/: Cargo.toml
scripts/: cuda-test.py  plt_charts.py  text_preprocessing.py  train_helpers.py
stock-sentiment/: app.py  play.ipynb
(+17 files in other folders)
